--- a/prepros.config
+++ b/prepros.config
@@ -78,6 +78,7 @@
       "autoUpload": false,
       "reuseConnection": true,
       "connectionType": "ftp",
+      "exportHistory": true,
       "history": []
     },
     "packages": {
@@ -846,12 +847,12 @@
         "sourceMap": false,
         "tasks": [
           {
-            "task": "typescript",
+            "task": "copy",
             "enable": true
           },
           {
             "task": "babel",
-            "enable": false
+            "enable": true
           },
           {
             "task": "bundle-js",
@@ -927,6 +928,13 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "styles/main.less",
+        "config": {
+          "customOutput": "styles\\main.css"
+        }
+      }
+    ]
   }
 }
